Add release info

--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_9
+stable: v1_10
+
+v1_10:
+  name: v1.10
+  minimum_otp: 21.0
+  version: 1.10.0
+  docs_zip: true
 
 v1_9:
   name: v1.9
