--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ kramdown:
 repository: elixir-lang/elixir-lang.github.com
 url: https://elixir-lang.org
 exclude:
+  - _build/
   - _epub/
   - vendor/
   - Gemfile
