--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_10
+stable: v1_11
+
+v1_11:
+  name: v1.11
+  minimum_otp: 21.0
+  version: 1.11.0
+  docs_zip: true
 
 v1_10:
   name: v1.10
