--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_11
+stable: v1_12
+
+v1_12:
+  name: v1.12
+  minimum_otp: 22.0
+  version: 1.12.0
+  docs_zip: true
 
 v1_11:
   name: v1.11
