Add a page on optional syntax

--- a/_data/getting-started.yml
+++ b/_data/getting-started.yml
@@ -61,6 +61,9 @@
     - title: Typespecs and behaviours
       slug: typespecs-and-behaviours
 
+    - title: Optional syntax sheet
+      slug: optional-syntax
+
     - title: Debugging
       slug: debugging
 
