--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /_site
 /.jekyll-metadata
-/cheatsheets/*.aux
-/cheatsheets/*.log
+/downloads/cheatsheets/*.aux
+/downloads/cheatsheets/*.log
 /.bundle
 /vendor
