--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_13
+stable: v1_14
+
+v1_14:
+  name: v1.14
+  minimum_otp: 23.0
+  version: 1.14.0
+  docs_zip: true
 
 v1_13:
   name: v1.13
