--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_14
+stable: v1_15
+
+v1_15:
+  name: v1.15
+  minimum_otp: 24.0
+  otp_versions: [26, 25, 24]
+  version: 1.15.0
 
 v1_14:
   name: v1.14
