--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_15
+stable: v1_16
+
+v1_16:
+  name: v1.16
+  minimum_otp: 24.0
+  otp_versions: [26, 25, 24]
+  version: 1.16.0
 
 v1_15:
   name: v1.15
