--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,14 @@ plugins:
 defaults:
   - scope:
       path: ""
+      type: pages
+    values:
+      layout: default
+      image: /images/social/elixir-og-card.jpg
+  - scope:
+      path: "posts"
       type: posts
     values:
       layout: post
       permalink: /blog/:year/:month/:day/:title/
+      image: /images/social/elixir-og-card.jpg
