Specify og:image for posts and individual pages
This adds a larger, wide format version of the elixir log as the
og:image and twitter:image seo meta tags for all pages. Each layout and
non-post page must set the image separately to be included in the
rendered html.

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,4 @@ defaults:
     values:
       layout: post
       permalink: /blog/:year/:month/:day/:title/
+      image: /images/social/elixir-og-card.jpg
