--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,10 @@
-stable: v1_16
+stable: v1_17
+
+v1_17:
+  name: v1.17
+  minimum_otp: 25.0
+  otp_versions: [27, 26, 25]
+  version: 1.17.0
 
 v1_16:
   name: v1.16
