--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -3,6 +3,7 @@ stable: v1_17
 v1_17:
   name: v1.17
   minimum_otp: 25.0
+  recommended_otp: 27.1.2
   otp_versions: [27, 26, 25]
   version: 1.17.3
 
