--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,11 @@
-stable: v1_17
+stable: v1_18
+
+v1_18:
+  name: v1.18
+  minimum_otp: 25.0
+  recommended_otp: 27.1.2
+  otp_versions: [27, 26, 25]
+  version: 1.18.0
 
 v1_17:
   name: v1.17
