--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -2,9 +2,9 @@ stable: v1_18
 
 v1_18:
   name: v1.18
-  minimum_otp: 25.0
+  minimum_otp: 26.0
   recommended_otp: 27.1.2
-  otp_versions: [27, 26, 25]
+  otp_versions: [27, 26]
   version: 1.18.1
 
 v1_17:
