--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -4,8 +4,8 @@ v1_18:
   name: v1.18
   minimum_otp: 26.0
   recommended_otp: 27.1.2
-  otp_versions: [27, 26]
-  version: 1.18.1
+  otp_versions: [27, 26, 25]
+  version: 1.18.2
 
 v1_17:
   name: v1.17
