--- a/_data/elixir-versions.yml
+++ b/_data/elixir-versions.yml
@@ -1,4 +1,11 @@
-stable: v1_18
+stable: v1_19
+
+v1_19:
+  name: v1.19
+  minimum_otp: 26.0
+  recommended_otp: 28.1
+  otp_versions: [28, 27, 26]
+  version: 1.19.0
 
 v1_18:
   name: v1.18
